...
                <rect key="frame" x="0.0" y="0.0" width="348" height="150"/>
                <autoresizingMask key="autoresizingMask"/>
                <subviews>
                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Rqp-yu-kiL">
                        <rect key="frame" x="245" y="13" width="89" height="32"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <buttonCell key="cell" type="push" title="Send" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="NO0-O6-V99">
                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                            <font key="font" metaFont="system"/>
                        </buttonCell>
                        <connections>
                            <action selector="closev2EventsSelectionWindow:" target="-2" id="J3g-OC-MaC"/>
                        </connections>
                    </button>
                    <comboBox verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="18I-RU-gA2">
                        <rect key="frame" x="20" y="72" width="311" height="25"/>
                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                        <comboBoxCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="Select V2 Event" drawsBackground="YES" completes="NO" numberOfVisibleItems="5" id="pHz-Og-rYr">
                            <font key="font" metaFont="system"/>
                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                        </comboBoxCell>
                    </comboBox>
                </subviews>
...
