...
            @"selector":    @"setIdentity:",
        },@{
            @"title":       @"Log User Out",
            @"detail":      @"Log the current user out.",
            @"selector":    @"logUserOut:",
        },@{
            @"title":       @"Send Event",
            @"detail":      @"Select and send a V2 event.",
            @"selector":    @"sendV2Event:",
        },@{
            @"title":       @"Create Short Link",
            @"detail":      @"Create a Branch short link.",
            @"selector":    @"createShortLink:",
...
