...
                <outlet property="view" destination="cZK-UO-Lya" id="XqN-Tg-FMl"/>
                <outlet property="window" destination="nWU-8m-tPw" id="QdA-UL-XCr"/>
            </connections>
        </customObject>
        <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
        <window title="TestBed-Mac" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="nWU-8m-tPw">
            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
            <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
            <rect key="contentRect" x="123" y="400" width="850" height="420"/>
            <rect key="screenRect" x="0.0" y="0.0" width="1512" height="944"/>
            <value key="minSize" type="size" width="460" height="380"/>
            <value key="minFullScreenContentSize" type="size" width="460" height="380"/>
...
